@@ -1,15 +1,15 @@
-9425956d1e0a2141d82d8e446f7b180f *DESCRIPTION
+2016f2033457ba9c35e3b6bfd73593b2 *DESCRIPTION
 e69d095337e4c78e924b160c7932afdf *NAMESPACE
-db8a60c1d265fc4af85483a930f37bc0 *R/mstmap10.R
-d583549039aacab231d1c603ccd2a771 *build/vignette.rds
+98778df3d756effc4e73eb31ce58f69d *R/mstmap10.R
+f004b00e917743c2243c9f507b97839d *build/vignette.rds
 17ffa7ec460bd87e4829a099e5d2e133 *data/mapBC.RData
 00adc3a855bfd6d59bff8551a25df1cb *data/mapBCu.RData
 e41448667946c60873941e59a0501654 *data/mapDH.RData
 945add16e921bff31f24a8f77b7bf9da *data/mapDHf.RData
 d4d9aa0a173827cc0d9960ccf67f3318 *data/mapF2.RData
-563809e0f04ab9cc15e9e633b822c36b *inst/NEWS.Rd
+19b29b1bf38d8759bbc556de5e4a2fcd *inst/NEWS.Rd
 3e7d7e09d20116ba3d0aed3a70b5d5db *inst/doc/asmapvignette.R
-82b5b45f88c924b7e59e6130deee7924 *inst/doc/asmapvignette.Rnw
+cc72bdaf1f6c7049ebb67fe99b3056ca *inst/doc/asmapvignette.Rnw
 d33832fa5dc0fab73effca1d106e9a9e *inst/doc/asmapvignette.pdf
 eca0f5e4c34638820bdacceaeaa3ab6e *man/ASMap-internal.Rd
 1c4236fb3b059ccaaa2dd7e7a0d7ff16 *man/ASMap-package.Rd
@@ -53,7 +53,7 @@ dc13406366059cb93ec6e303d365d03a *src/sexp.cpp
 40bceb71c546f57a437141ec5ed7863c *vignettes/SAGI.png
 40ca5847555d6af8e641fa8bec472d64 *vignettes/SAGI.sty
 8ef8189fd90401c8af184ce339ae2647 *vignettes/UoA.png
-82b5b45f88c924b7e59e6130deee7924 *vignettes/asmapvignette.Rnw
+cc72bdaf1f6c7049ebb67fe99b3056ca *vignettes/asmapvignette.Rnw
 1cc5e018f2c5a2dc43a167620837a87f *vignettes/biometrika.bst
 8e2a977b794ef484d8e8a5ec4a03ab2a *vignettes/heatmap.png
 9b6cede138bd047ce25b7162e36573f8 *vignettes/heatmapDH.png
